TextEditor: Indent line when comment marker is not in the first column

Change-Id: I02713f1151264411451c5d9b476847e451ccef05
Fixes: QTCREATORBUG-21852
Reviewed-by: Ivan Donchevskii <ivan.donchevskii@qt.io>